--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -8,12 +12,21 @@ h1 {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 3em;
   border-bottom: 2px solid teal;
-  width: 400px;
+  border-right: 2px solid teal;
+  box-shadow: 4px 4px 5px #888888;
+  
+  width: 400px; 
   text-align: center;
+  margin-top: 10px;
 }
 
 img {
   width: 450px;
   height: 300px;
   margin: 10px;
+  transition: all 1s;
+}
+
+img:hover {
+  transform: scale(1.1);
 }
